--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "core-js": "^3.29.0",
+    "firebase": "^10.6.0",
     "pinia": "^2.0.0",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
