--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@vueuse/core": "^10.7.0",
     "core-js": "^3.29.0",
     "firebase": "^10.6.0",
     "pinia": "^2.0.0",
