--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@types/crypto-js": "^4.2.1",
     "@vueuse/core": "^10.7.0",
     "core-js": "^3.29.0",
+    "crypto-js": "^4.2.0",
     "firebase": "^10.6.0",
     "pinia": "^2.0.0",
     "vue": "^3.2.0",
