--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vueuse/core": "^10.7.0",
     "core-js": "^3.29.0",
     "crypto-js": "^4.2.0",
+    "date-fns": "^3.3.1",
     "firebase": "^10.6.0",
     "pinia": "^2.0.0",
     "vue": "^3.2.0",
