--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "@types/crypto-js": "^4.2.1",
-    "@vueuse/core": "^10.7.0",
+    "@types/web-bluetooth": "^0.0.20",
+    "@vueuse/core": "^10.7.2",
     "core-js": "^3.29.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.3.1",
